src/com/backendless/persistence/offline/visitor/gen/BackendlessQueryParser.java
// Generated from /home/max/Dev/Projects/IntellijProjects/TestVisitor/visitor/resources/BackendlessQuery.g4 by ANTLR 4.7.2
package com.backendless.persistence.offline.visitor.gen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BackendlessQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, AFTER=24, 
		AND=25, AT=26, AS=27, ASC=28, AVG=29, BEFORE=30, BY=31, COUNT=32, DESC=33, 
		DISTANCE=34, DISTANCE_ON_SPHERE=35, DIV=36, ESCAPE=37, FALSE=38, FT=39, 
		GROUP=40, HAVING=41, IN=42, IS=43, KM=44, LIMIT=45, LIKE=46, MAX=47, MI=48, 
		MIN=49, MOD=50, NOT=51, NULL=52, OFFSET=53, OR=54, SELECT=55, SORT=56, 
		SUM=57, TRUE=58, YD=59, AsWKB=60, AsWKT=61, AsGeoJSON=62, ID=63, INT=64, 
		CHAR_STRING=65, WS=66;
	public static final int
		RULE_select_statement = 0, RULE_select_list = 1, RULE_select_list_elem = 2, 
		RULE_group_by_clause = 3, RULE_having_clause = 4, RULE_sort_by_clause = 5, 
		RULE_sort_by_elem = 6, RULE_limit_clause = 7, RULE_function_call = 8, 
		RULE_spatial_convert_function = 9, RULE_spatial_function_parameter = 10, 
		RULE_aswkb_function = 11, RULE_aswkt_function = 12, RULE_asgeojson_function = 13, 
		RULE_spatial_function = 14, RULE_distance_function = 15, RULE_distance_on_sphere = 16, 
		RULE_units_function = 17, RULE_aggregate_windowed_function = 18, RULE_condition = 19, 
		RULE_expression_atom = 20, RULE_full_column_name = 21, RULE_single_column_name = 22, 
		RULE_relation_column = 23, RULE_inverse_relation_column = 24, RULE_unknown_function = 25, 
		RULE_alias = 26, RULE_table_name = 27, RULE_simple_column = 28, RULE_unknown_name = 29, 
		RULE_constant = 30, RULE_boolean_literal = 31, RULE_numeric_literal = 32, 
		RULE_string_literal = 33, RULE_regular_id = 34, RULE_keyword_as_id = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"select_statement", "select_list", "select_list_elem", "group_by_clause", 
			"having_clause", "sort_by_clause", "sort_by_elem", "limit_clause", "function_call", 
			"spatial_convert_function", "spatial_function_parameter", "aswkb_function", 
			"aswkt_function", "asgeojson_function", "spatial_function", "distance_function", 
			"distance_on_sphere", "units_function", "aggregate_windowed_function", 
			"condition", "expression_atom", "full_column_name", "single_column_name", 
			"relation_column", "inverse_relation_column", "unknown_function", "alias", 
			"table_name", "simple_column", "unknown_name", "constant", "boolean_literal", 
			"numeric_literal", "string_literal", "regular_id", "keyword_as_id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'.'", "'{'", "','", "'}'", "'('", "')'", "'!'", 
			"'&&'", "'||'", "'='", "'!='", "'<>'", "'>='", "'>'", "'<='", "'<'", 
			"'-'", "'*'", "'/'", "'%'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"AFTER", "AND", "AT", "AS", "ASC", "AVG", "BEFORE", "BY", "COUNT", "DESC", 
			"DISTANCE", "DISTANCE_ON_SPHERE", "DIV", "ESCAPE", "FALSE", "FT", "GROUP", 
			"HAVING", "IN", "IS", "KM", "LIMIT", "LIKE", "MAX", "MI", "MIN", "MOD", 
			"NOT", "NULL", "OFFSET", "OR", "SELECT", "SORT", "SUM", "TRUE", "YD", 
			"AsWKB", "AsWKT", "AsGeoJSON", "ID", "INT", "CHAR_STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BackendlessQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BackendlessQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Select_statementContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Select_listContext select_list() {
			return getRuleContext(Select_listContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Group_by_clauseContext group_by_clause() {
			return getRuleContext(Group_by_clauseContext.class,0);
		}
		public Having_clauseContext having_clause() {
			return getRuleContext(Having_clauseContext.class,0);
		}
		public Sort_by_clauseContext sort_by_clause() {
			return getRuleContext(Sort_by_clauseContext.class,0);
		}
		public Limit_clauseContext limit_clause() {
			return getRuleContext(Limit_clauseContext.class,0);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterSelect_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitSelect_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitSelect_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_statementContext select_statement() throws RecognitionException {
		Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_select_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			table_name();
			setState(73);
			match(T__0);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & ((1L << (T__2 - 3)) | (1L << (T__6 - 3)) | (1L << (T__8 - 3)) | (1L << (T__18 - 3)) | (1L << (AFTER - 3)) | (1L << (AND - 3)) | (1L << (AT - 3)) | (1L << (AS - 3)) | (1L << (ASC - 3)) | (1L << (AVG - 3)) | (1L << (BEFORE - 3)) | (1L << (BY - 3)) | (1L << (COUNT - 3)) | (1L << (DESC - 3)) | (1L << (DISTANCE - 3)) | (1L << (DISTANCE_ON_SPHERE - 3)) | (1L << (DIV - 3)) | (1L << (ESCAPE - 3)) | (1L << (FALSE - 3)) | (1L << (FT - 3)) | (1L << (GROUP - 3)) | (1L << (HAVING - 3)) | (1L << (IN - 3)) | (1L << (IS - 3)) | (1L << (KM - 3)) | (1L << (LIMIT - 3)) | (1L << (LIKE - 3)) | (1L << (MAX - 3)) | (1L << (MI - 3)) | (1L << (MIN - 3)) | (1L << (MOD - 3)) | (1L << (NOT - 3)) | (1L << (NULL - 3)) | (1L << (OFFSET - 3)) | (1L << (OR - 3)) | (1L << (SELECT - 3)) | (1L << (SORT - 3)) | (1L << (SUM - 3)) | (1L << (TRUE - 3)) | (1L << (YD - 3)) | (1L << (AsWKB - 3)) | (1L << (AsWKT - 3)) | (1L << (AsGeoJSON - 3)) | (1L << (ID - 3)) | (1L << (INT - 3)) | (1L << (CHAR_STRING - 3)))) != 0)) {
				{
				setState(74);
				condition(0);
				}
			}

			setState(77);
			match(T__1);
			setState(78);
			match(T__2);
			setState(79);
			select_list();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(80);
				group_by_clause();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(83);
				having_clause();
				}
			}

			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SORT) {
				{
				setState(86);
				sort_by_clause();
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(89);
				limit_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_listContext extends ParserRuleContext {
		public List<Select_list_elemContext> select_list_elem() {
			return getRuleContexts(Select_list_elemContext.class);
		}
		public Select_list_elemContext select_list_elem(int i) {
			return getRuleContext(Select_list_elemContext.class,i);
		}
		public Select_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterSelect_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitSelect_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitSelect_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_listContext select_list() throws RecognitionException {
		Select_listContext _localctx = new Select_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select_list);
		int _la;
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(T__3);
				setState(93);
				select_list_elem();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(94);
					match(T__4);
					setState(95);
					select_list_elem();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(T__5);
				}
				break;
			case T__2:
			case T__18:
			case AFTER:
			case AND:
			case AT:
			case AS:
			case ASC:
			case AVG:
			case BEFORE:
			case BY:
			case COUNT:
			case DESC:
			case DISTANCE:
			case DISTANCE_ON_SPHERE:
			case DIV:
			case ESCAPE:
			case FALSE:
			case FT:
			case GROUP:
			case HAVING:
			case IN:
			case IS:
			case KM:
			case LIMIT:
			case LIKE:
			case MAX:
			case MI:
			case MIN:
			case MOD:
			case NOT:
			case NULL:
			case OFFSET:
			case OR:
			case SELECT:
			case SORT:
			case SUM:
			case TRUE:
			case YD:
			case AsWKB:
			case AsWKT:
			case AsGeoJSON:
			case ID:
			case INT:
			case CHAR_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				select_list_elem();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_list_elemContext extends ParserRuleContext {
		public Select_list_elemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_list_elem; }
	 
		public Select_list_elemContext() { }
		public void copyFrom(Select_list_elemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SimpleSelectElemContext extends Select_list_elemContext {
		public Expression_atomContext expression_atom() {
			return getRuleContext(Expression_atomContext.class,0);
		}
		public SimpleSelectElemContext(Select_list_elemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterSimpleSelectElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitSimpleSelectElem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitSimpleSelectElem(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AliasedSelectElemContext extends Select_list_elemContext {
		public Expression_atomContext expression_atom() {
			return getRuleContext(Expression_atomContext.class,0);
		}
		public TerminalNode AS() { return getToken(BackendlessQueryParser.AS, 0); }
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public AliasedSelectElemContext(Select_list_elemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterAliasedSelectElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitAliasedSelectElem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitAliasedSelectElem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_list_elemContext select_list_elem() throws RecognitionException {
		Select_list_elemContext _localctx = new Select_list_elemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select_list_elem);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new SimpleSelectElemContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				expression_atom(0);
				}
				break;
			case 2:
				_localctx = new AliasedSelectElemContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				expression_atom(0);
				setState(108);
				match(AS);
				setState(109);
				alias();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Group_by_clauseContext extends ParserRuleContext {
		public TerminalNode GROUP() { return getToken(BackendlessQueryParser.GROUP, 0); }
		public TerminalNode BY() { return getToken(BackendlessQueryParser.BY, 0); }
		public List<Expression_atomContext> expression_atom() {
			return getRuleContexts(Expression_atomContext.class);
		}
		public Expression_atomContext expression_atom(int i) {
			return getRuleContext(Expression_atomContext.class,i);
		}
		public Group_by_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group_by_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterGroup_by_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitGroup_by_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitGroup_by_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Group_by_clauseContext group_by_clause() throws RecognitionException {
		Group_by_clauseContext _localctx = new Group_by_clauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_group_by_clause);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(GROUP);
			setState(114);
			match(BY);
			setState(115);
			expression_atom(0);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					match(T__4);
					setState(117);
					expression_atom(0);
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Having_clauseContext extends ParserRuleContext {
		public TerminalNode HAVING() { return getToken(BackendlessQueryParser.HAVING, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Having_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_having_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterHaving_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitHaving_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitHaving_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Having_clauseContext having_clause() throws RecognitionException {
		Having_clauseContext _localctx = new Having_clauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_having_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(HAVING);
			setState(124);
			condition(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sort_by_clauseContext extends ParserRuleContext {
		public TerminalNode SORT() { return getToken(BackendlessQueryParser.SORT, 0); }
		public TerminalNode BY() { return getToken(BackendlessQueryParser.BY, 0); }
		public List<Sort_by_elemContext> sort_by_elem() {
			return getRuleContexts(Sort_by_elemContext.class);
		}
		public Sort_by_elemContext sort_by_elem(int i) {
			return getRuleContext(Sort_by_elemContext.class,i);
		}
		public Sort_by_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort_by_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterSort_by_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitSort_by_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitSort_by_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sort_by_clauseContext sort_by_clause() throws RecognitionException {
		Sort_by_clauseContext _localctx = new Sort_by_clauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sort_by_clause);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SORT);
			setState(127);
			match(BY);
			setState(128);
			sort_by_elem();
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(129);
					match(T__4);
					setState(130);
					sort_by_elem();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sort_by_elemContext extends ParserRuleContext {
		public Expression_atomContext expression_atom() {
			return getRuleContext(Expression_atomContext.class,0);
		}
		public TerminalNode ASC() { return getToken(BackendlessQueryParser.ASC, 0); }
		public TerminalNode DESC() { return getToken(BackendlessQueryParser.DESC, 0); }
		public Sort_by_elemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort_by_elem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).enterSort_by_elem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BackendlessQueryListener ) ((BackendlessQueryListener)listener).exitSort_by_elem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BackendlessQueryVisitor ) return ((BackendlessQueryVisitor<? extends T>)visitor).visitSort_by_elem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sort_by_elemContext sort_by_elem() throws RecognitionException {
		Sort_by_elemContext _localctx = new Sort_by_elemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sort_by_elem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			expression_atom(0);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				setState(137);
				_la = _input.LA(1);
				if ( !(_la==ASC || _la==DESC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
